# felix_collapse

./: README.md  helpers.sh  pyproject.toml
estm/: __main__.py  adjacency.py  png.py  source_patterns.py  wavefunction.py  wvfc.py
waveform_collapse/: observe.py  propagate.py  wave_matrix.py  wvfc.py
