[tool.poetry]
name = "waveform-collapse"
version = "0.1.0"
description = ""
authors = ["Felix Tripier <tripier@ionq.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
imageio = "^2.31.6"
typed-argument-parser = "^1.8.1"
networkx = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
